--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div id="load-news" class="d-flex gap-5 fs-5 fw-normal mt-3 p-2">
+            <div>Home</div>
+            <div>Breking News</div>
+            <div>Regular News</div>
+            <div>International News</div>
+            <div>Sports</div>
+            <div>Entertainment</div>
+            <div>Culture</div>
+            <div>Arts</div>
+            <div>All news</div>
+        </div>
+    </section>
 
 
-    <h1>Hello world!</h1>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
