--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </section>
     </main>
     <!-- Main JavaScript -->
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
     <!-- Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
