--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>AZM Portal</title>
+    <title>Report Portal</title>
 </head>
 
 <body>
