--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container py-2">
-                <a class="navbar-brand text-black fw-bold fs-4" href="#">AZM Portal</a>
+                <a class="navbar-brand text-black fw-bold fs-4" href="#">Report Portal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
